Fix styling on collapsed lists

--- a/helpserver/assets/theme.css
+++ b/helpserver/assets/theme.css
@@ -1044,4 +1044,15 @@ font-weight: bold;
     .definitionTable > div > dt, .definitionTable > div > dd {
         display: block;
     }
+    .definitionTable > div > dt, .definitionTable > div > dd {
+        display: block;
+        margin-left: 0px;
+    }
+    .definitionTable > div > dt {
+        font-weight: bold;
+        border-bottom: none;
+    }
+    .definitionTable > div > dd {
+    	padding-left: 15px;
+    }
 }
